# expiscor

./: CHANGELOG.md  README.md  astro.config.mjs  package-lock.json  package.json  play.ipynb  pyproject.toml
src/components/: BaseHead.astro  Footer.astro  Header.astro  Hero.astro  PostPreview.astro  ProjectPreview.astro
src/content/blog/: don-t-like-dspy-read-this-before-you-decide-to-ditch-it.md  post-1.md  post-10.md  post-11.md  post-12.md  post-13.md  post-14.md  post-2.md  post-3.md  post-4.md  post-5.md  post-6.md  post-7.md  post-8.md  post-9.md
src/content/pages/: about.md  contact.md
src/content/projects/: project-1.md  project-2.md  project-3.md  project-4.md  project-5.md  project-6.md  project-7.md
src/data/: site-config.ts
src/pages/: index.astro
src/pages/blog/: [id].astro
src/pages/tags/: index.astro
src/styles/: global.css
tests/: test_expiscor.py
